# ollama-cli-tui

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  install.sh  pyproject.toml  run.py  run.sh  uninstall.sh
scripts/: take_screenshots.py
src/ollama_tui/: __init__.py  __main__.py  app.py  ollama_client.py
src/ollama_tui/screens/: __init__.py  confirm_dialog.py  model_info.py  pull_progress.py  tag_selection.py
src/ollama_tui/styles/: app.tcss
src/ollama_tui/widgets/: __init__.py  models_view.py  ps_view.py  search_view.py
